[Delivers #68556386] Removing the line I understood the least from a CSS block I pasted in from Stack Overflow to fix another problem seems to have fixed this.

--- a/IFComp/root/static/css/ifcomp.css
+++ b/IFComp/root/static/css/ifcomp.css
@@ -27,5 +27,4 @@ code {
 .page-header h1 {
   padding-top: 60px;
   margin-top: -60px;
-  display: inline-block; /* required for webkit browsers */
 }
